k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/oauth-g4-group4: "true"
        io.kompose.service: keycloak
    spec:
      containers:
        - args:
            - start-dev
            - --import-realm
          image: quay.io/keycloak/keycloak:21.0.2
          name: keycloak
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /opt/jboss/keycloak/standalone/data
              name: keycloak-claim
            - mountPath: /opt/keycloak/data/import
              name: keycloak-claim
      restartPolicy: Always
      volumes:
        - name: keycloak-claim
          persistentVolumeClaim:
            claimName: keycloak-claim
status: {}
