k8s/oauth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: oauth
  name: oauth
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: oauth
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/network: "true"
        io.kompose.service: oauth
    spec:
      containers:
        - env:
            - name: KEYCLOAK_CLIENT_ID
              value: oauth
            - name: KEYCLOAK_CLIENT_SECRET
              value: 04bfUatIDO6ipwg1TF2mTzHrX8UZD02Z
            - name: KEYCLOAK_REALM
              value: construcao-sw
            - name: KEYCLOAK_REALM_URL
              value: http://keycloak:8080
          image: ghcr.io/constr-sw-2023-1/oauth-g4:main
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:8080/actuator/health
            failureThreshold: 5
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 10
          name: oauth
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
status: {}
