k8s/oauth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: oauth-service
  name: oauth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: oauth-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/oauth-g4-group4: "true"
        io.kompose.service: oauth-service
    spec:
      containers:
        - env:
            - name: KEYCLOAK_CLIENT_ID
              value: oauth
            - name: KEYCLOAK_CLIENT_SECRET
              value: 04bfUatIDO6ipwg1TF2mTzHrX8UZD02Z
            - name: KEYCLOAK_REALM
              value: construcao-sw
            - name: KEYCLOAK_REALM_URL
              value: http://keycloak:8080
          image: ghcr.io/constr-sw-2023-1/oauth-g4:main
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:8080/actuator/health
            failureThreshold: 5
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 10
          name: oauth-service
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
status: {}
