k8s/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  ports:
    - name: "8090-keycloak"
      port: 8090
      targetPort: 8080
  selector:
    io.kompose.service: keycloak
status:
  loadBalancer: {}
